ozone_demo: Use result of CheckOverlaySupport.

ozone_demo has the option to display one hardware overlay on top of the
primary plane, and it uses CheckOverlaySupport functionality to query
if a configuartion of overlays is supported.

Currently, the result of the query is not used, and an HW overlay
is always scheduled if requested.

This CL uses the result of the query and avoids scheduling the overlay
if the result says it is not supported.

In order to do that this CL has to:

- Add the primary plane, when present, to the list of overlays to be tested,
since the primary plane contributes significantly to the scanout bandwith and
its presence is determinant to the feasibility of scanning out a set of
overlays.

- Get rid of the continuous overlay animation, and instead replace it with a
stepped animation every n frames.
HW overlays validations are asynchronous and results are sent back after a few frames,
while originally perceived as a bug crbug.com/735640, this is the intended behavior.
Validating configurations is costly and we can't afford to validate once per
frame. We validate HW overlay configurations only after they're stable for
a few frames.
Moving the HW overlays every n frames allows the configuration of overlays
to be stable for a few frames.

- Add double buffering to the overlay. Since the continuous animation has
been removed, we now have two buffers with different colors for the overlay
and we flip those. This makes it visible we're updating the HW overlay
along with the background color.


Bug: 735640
Test: ozone_demo on eve, with/without enable-overlay/disable-primary-plane
Change-Id: I652fbc75ce385b0a1f6563d4a85005b643226128
Reviewed-on: https://chromium-review.googlesource.com/644351
Commit-Queue: Daniele Castagna <dcastagna@chromium.org>
Reviewed-by: Robert Kroeger <rjkroege@chromium.org>
Reviewed-by: Daniel Nicoara <dnicoara@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498724}
Former-commit-id: 5d4c0cf9dd3f457fe3511a8358a5e6e578234c06