ui/ozone/demo/surfaceless_gl_renderer.cc
@@ -24,6 +24,36 @@
 
 namespace ui {
 
+namespace {
+
+OverlaySurfaceCandidate MakeOverlayCandidate(int z_order,
+                                             gfx::Rect bounds_rect,
+                                             gfx::RectF crop_rect) {
+  // The overlay checking interface is designed to satisfy the needs of CC which
+  // will be producing RectF target rectangles. But we use the bounds produced
+  // in RenderFrame for GLSurface::ScheduleOverlayPlane.
+  gfx::RectF display_rect(bounds_rect.x(), bounds_rect.y(), bounds_rect.width(),
+                          bounds_rect.height());
+
+  OverlaySurfaceCandidate overlay_candidate;
+
+  // The bounds rectangle of the candidate overlay buffer.
+  overlay_candidate.buffer_size = bounds_rect.size();
+  // The same rectangle in floating point coordinates.
+  overlay_candidate.display_rect = display_rect;
+
+  // Show the entire buffer by setting the crop to a unity square.
+  overlay_candidate.crop_rect = gfx::RectF(0, 0, 1, 1);
+
+  // The demo overlay instance is always ontop and not clipped. Clipped quads
+  // cannot be placed in overlays.
+  overlay_candidate.is_clipped = false;
+
+  return overlay_candidate;
+}
+
+}  // namespace
+
 SurfacelessGlRenderer::BufferWrapper::BufferWrapper() {
 }
 
@@ -107,12 +137,14 @@ bool SurfacelessGlRenderer::Initialize() {
   base::CommandLine* command_line = base::CommandLine::ForCurrentProcess();
   if (command_line->HasSwitch("enable-overlay")) {
     gfx::Size overlay_size = gfx::Size(size_.width() / 8, size_.height() / 8);
-    overlay_buffer_.reset(new BufferWrapper());
-    overlay_buffer_->Initialize(gfx::kNullAcceleratedWidget, overlay_size);
+    for (size_t i = 0; i < arraysize(overlay_buffer_); ++i) {
+      overlay_buffer_[i].reset(new BufferWrapper());
+      overlay_buffer_[i]->Initialize(gfx::kNullAcceleratedWidget, overlay_size);
 
-    glViewport(0, 0, overlay_size.width(), overlay_size.height());
-    glClearColor(1.0, 1.0, 0.0, 1.0);
-    glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
+      glViewport(0, 0, overlay_size.width(), overlay_size.height());
+      glClearColor(i, 1.0, 0.0, 1.0);
+      glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
+    }
   }
 
   disable_primary_plane_ = command_line->HasSwitch("disable-primary-plane");
@@ -120,53 +152,42 @@ bool SurfacelessGlRenderer::Initialize() {
   return true;
 }
 
-// OverlayChecker demonstrates how to use the
-// OverlayCandidatesOzone::CheckOverlaySupport to determine if a given overlay
-// can be successfully displayed.
-void SurfacelessGlRenderer::OverlayChecker(int z_order,
-                                           gfx::Rect bounds_rect,
-                                           gfx::RectF crop_rect) {
-  // The overlay checking interface is designed to satisfy the needs of CC which
-  // will be producing RectF target rectangles. But we use the bounds produced
-  // in RenderFrame for GLSurface::ScheduleOverlayPlane.
-  gfx::RectF display_rect(bounds_rect.x(), bounds_rect.y(), bounds_rect.width(),
-                          bounds_rect.height());
-
-  OverlaySurfaceCandidate overlay_candidate;
-
-  // The bounds rectangle of the candidate overlay buffer.
-  overlay_candidate.buffer_size = bounds_rect.size();
-  // The same rectangle in floating point coordinates.
-  overlay_candidate.display_rect = display_rect;
-
-  // Show the entire buffer by setting the crop to a unity square.
-  overlay_candidate.crop_rect = gfx::RectF(0, 0, 1, 1);
-
-  // The clip region is the entire screen.
-  overlay_candidate.clip_rect = gfx::Rect(size_);
-
-  // The demo overlay instance is always ontop and not clipped. Clipped quads
-  // cannot be placed in overlays.
-  overlay_candidate.is_clipped = false;
-
-  OverlayCandidatesOzone::OverlaySurfaceCandidateList list;
-  list.push_back(overlay_candidate);
-
-  // Ask ozone platform to determine if this rect can be placed in an overlay.
-  // Ozone will update the list and return it.
-  overlay_checker_->CheckOverlaySupport(&list);
-
-  // Note what the checker decided.
-  // say more about it.
-  TRACE_EVENT2("hwoverlays", "SurfacelessGlRenderer::OverlayChecker", "canihaz",
-               list[0].overlay_handled, "display_rect",
-               list[0].display_rect.ToString());
-}
-
 void SurfacelessGlRenderer::RenderFrame() {
   TRACE_EVENT0("ozone", "SurfacelessGlRenderer::RenderFrame");
 
   float fraction = NextFraction();
+
+  gfx::Rect overlay_rect;
+
+  OverlayCandidatesOzone::OverlaySurfaceCandidateList overlay_list;
+  if (!disable_primary_plane_) {
+    overlay_list.push_back(
+        MakeOverlayCandidate(1, gfx::Rect(size_), gfx::RectF(0, 0, 1, 1)));
+    // We know at least the primary plane can be scanned out.
+    overlay_list.back().overlay_handled = true;
+  }
+  if (overlay_buffer_[0]) {
+    overlay_rect = gfx::Rect(overlay_buffer_[0]->size());
+
+    float steps_num = 5.0f;
+    float stepped_fraction =
+        std::floor((fraction + 0.5f / steps_num) * steps_num) / steps_num;
+    gfx::Vector2d offset(
+        stepped_fraction * (size_.width() - overlay_rect.width()),
+        (size_.height() - overlay_rect.height()) / 2);
+    overlay_rect += offset;
+    overlay_list.push_back(
+        MakeOverlayCandidate(1, overlay_rect, gfx::RectF(0, 0, 1, 1)));
+  }
+
+  // The actual validation for a specific overlay configuration is done
+  // asynchronously and then cached inside overlay_checker_ once a reply
+  // is sent back.
+  // This means that the first few frames we call this method for a specific
+  // overlay_list, all the overlays but the primary plane, that we explicitly
+  // marked as handled, will be rejected even if they might be handled at a
+  // later time.
+  overlay_checker_->CheckOverlaySupport(&overlay_list);
 
   context_->MakeCurrent(surface_.get());
   buffers_[back_buffer_]->BindFramebuffer();
@@ -176,24 +197,16 @@ void SurfacelessGlRenderer::RenderFrame() {
   glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
 
   if (!disable_primary_plane_) {
+    CHECK(overlay_list.front().overlay_handled);
     surface_->ScheduleOverlayPlane(0, gfx::OVERLAY_TRANSFORM_NONE,
                                    buffers_[back_buffer_]->image(),
                                    gfx::Rect(size_), gfx::RectF(0, 0, 1, 1));
   }
 
-  if (overlay_buffer_) {
-    gfx::Rect overlay_rect(overlay_buffer_->size());
-    gfx::Vector2d offset(fraction * (size_.width() - overlay_rect.width()),
-                         (size_.height() - overlay_rect.height()) / 2);
-    overlay_rect += offset;
-
-    // TODO(rjkroege): Overlay checking should gate the following and will
-    // be added after solving http://crbug.com/735640
-    OverlayChecker(1, overlay_rect, gfx::RectF(0, 0, 1, 1));
-
+  if (overlay_buffer_[0] && overlay_list.back().overlay_handled) {
     surface_->ScheduleOverlayPlane(1, gfx::OVERLAY_TRANSFORM_NONE,
-                                   overlay_buffer_->image(), overlay_rect,
-                                   gfx::RectF(0, 0, 1, 1));
+                                   overlay_buffer_[back_buffer_]->image(),
+                                   overlay_rect, gfx::RectF(0, 0, 1, 1));
   }
 
   back_buffer_ ^= 1;
